--- a/ibuprofen.html
+++ b/ibuprofen.html
@@ -4,183 +4,146 @@
 <meta charset="UTF-8"/>
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Ibuprofen – xanuun, barar &amp; qandho</title>
+
 <style>
+:root{
+  /* Theme variables (changed by JS) */
+  --accent1:#00a676;
+  --accent2:#0066cc;
+  --accentText:#ffffff;
+
+  --bg:#e6f2f8;
+  --text:#123047;
+  --muted:#607089;
+
+  --card:#ffffff;
+  --stroke:#d0d7e2;
+
+  --pillBg:#d9f6e8;
+  --pillText:#16634a;
+
+  --link:#00509e;
+}
+
+/* Smooth theme transitions */
+@media (prefers-reduced-motion: no-preference){
+  body, header, .langbar, .card, .index-link, .badge, .drug-icon, .section-icon, a.back{
+    transition: background-color .35s ease, color .35s ease, border-color .35s ease, box-shadow .35s ease;
+  }
+  header{
+    transition: background .45s ease, color .35s ease;
+  }
+}
 
 body {
   font-family: Arial, sans-serif;
-  background: #e6f2f8;
-  color: #123047;
+  background: var(--bg);
+  color: var(--text);
   margin: 0;
 }
+
 header {
-  background: linear-gradient(135deg, #0066cc, #00a676);
-  color: #fff;
+  background: linear-gradient(135deg, var(--accent1), var(--accent2));
+  color: var(--accentText);
   padding: 22px 16px;
   text-align: center;
   box-shadow: 0 2px 8px rgba(0,0,0,0.15);
 }
-header h1 {
-  margin: 0 0 4px;
-  font-size: 1.8rem;
-}
-header p {
-  margin: 0;
-  font-size: 0.95rem;
-}
-main {
-  max-width: 820px;
-  margin: 18px auto 32px;
-  padding: 0 14px;
-}
-a.back {
-  display: inline-flex;
-  align-items: center;
-  gap: 6px;
-  margin-bottom: 14px;
-  text-decoration: none;
-  color: #00509e;
-  font-size: 0.9rem;
-}
-a.back span { font-size: 1.1rem; }
 
-.card {
-  background: #ffffff;
+header h1 { margin: 0 0 4px; font-size: 1.8rem; }
+header p { margin: 0; font-size: 0.95rem; }
+
+main { max-width: 820px; margin: 18px auto 32px; padding: 0 14px; }
+
+a.back{
+  display:inline-flex; align-items:center; gap:6px; margin-bottom:14px;
+  text-decoration:none; color:var(--link); font-size:0.9rem;
+}
+a.back span{ font-size:1.1rem; }
+
+.card{
+  background: var(--card);
   border-radius: 14px;
   padding: 16px 16px 10px;
   margin-bottom: 14px;
   box-shadow: 0 3px 10px rgba(15, 23, 42, 0.12);
-  border-top: 4px solid #00a676;
-}
-.drug-meta {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  gap: 10px;
-  margin-bottom: 8px;
-}
-.drug-info {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-.drug-icon {
-  width: 44px;
-  height: 44px;
-  border-radius: 12px;
-  background: #e3f2fd;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.drug-icon svg {
-  width: 30px;
-  height: 30px;
-}
-.drug-labels { display: flex; flex-direction: column; }
-.drug-name { font-weight: 600; font-size: 0.95rem; }
-.drug-form { font-size: 0.82rem; color: #29516e; }
-
-.badge {
-  display: inline-flex;
-  align-items: center;
-  gap: 4px;
-  background: #d9f6e8;
-  color: #16634a;
-  padding: 4px 10px;
-  border-radius: 999px;
-  font-size: 0.8rem;
+  border-top: 4px solid var(--accent1);
 }
 
-.section {
-  margin-top: 8px;
-  padding-top: 8px;
-  border-top: 1px dashed #d0d7e2;
+.drug-meta{
+  display:flex; align-items:center; justify-content:space-between; flex-wrap:wrap;
+  gap:10px; margin-bottom:8px;
 }
-.section-header {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  margin-bottom: 4px;
-}
-.section-icon {
-  width: 24px;
-  height: 24px;
-  border-radius: 999px;
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  font-size: 0.9rem;
-  color: #123047;
-}
-.section-icon.use { background:#e3f2fd; }
-.section-icon.dose { background:#e2f5ea; }
-.section-icon.side { background:#fff3e0; }
-.section-icon.interact { background:#ede7f6; }
-.section-icon.warn { background:#ffebee; }
-.section-icon.ramadan { background:#e0f7fa; }
-.section-icon.food { background:#f1f8e9; }
-.section-icon.store { background:#edeff9; }
+.drug-info{ display:flex; align-items:center; gap:10px; }
 
-.section-title {
-  font-weight: 700;
-  color: #123047;
-  font-size: 0.96rem;
+.drug-icon{
+  width:44px; height:44px; border-radius:12px;
+  background:#e3f2fd;
+  display:flex; align-items:center; justify-content:center;
 }
-.section-title small {
-  font-weight: 400;
-  color: #607089;
-}
-.section ul {
-  margin: 0 0 4px 18px;
-  padding-left: 0;
-  font-size: 0.92rem;
-}
-.section ul li { margin-bottom: 4px; }
+.drug-icon svg{ width:30px; height:30px; }
+.drug-icon svg .stroke{ stroke: var(--accent2); }
+.drug-icon svg .fill{ fill: #e8f3ff; }
 
-.highlight { font-weight: 600; }
+.drug-labels{ display:flex; flex-direction:column; }
+.drug-name{ font-weight:600; font-size:0.95rem; }
+.drug-form{ font-size:0.82rem; color:#29516e; }
 
-.footer-note {
-  font-size: 0.8rem;
-  color: #607089;
-  text-align: center;
-  margin: 18px 0 10px;
+.badge{
+  display:inline-flex; align-items:center; gap:4px;
+  background: var(--pillBg);
+  color: var(--pillText);
+  padding:4px 10px; border-radius:999px; font-size:0.8rem;
+  border:1px solid rgba(0,0,0,0.04);
 }
 
-@media (max-width: 600px) {
-  header h1 { font-size: 1.5rem; }
+.section{ margin-top:8px; padding-top:8px; border-top:1px dashed var(--stroke); }
+.section-header{ display:flex; align-items:center; gap:8px; margin-bottom:4px; }
+
+.section-icon{
+  width:24px; height:24px; border-radius:999px;
+  display:inline-flex; align-items:center; justify-content:center;
+  font-size:0.9rem; color: var(--text);
 }
+
+.section-icon.use{ background:#e3f2fd; }
+.section-icon.dose{ background:#e2f5ea; }
+.section-icon.side{ background:#fff3e0; }
+.section-icon.interact{ background:#ede7f6; }
+.section-icon.warn{ background:#ffebee; }
+.section-icon.ramadan{ background:#e0f7fa; }
+.section-icon.food{ background:#f1f8e9; }
+.section-icon.store{ background:#edeff9; }
+
+.section-title{ font-weight:700; color:var(--text); font-size:0.96rem; }
+.section-title small{ font-weight:400; color:var(--muted); }
+
+.section ul{ margin:0 0 4px 18px; padding-left:0; font-size:0.92rem; }
+.section ul li{ margin-bottom:4px; }
+
+.highlight{ font-weight:600; }
+
+.footer-note{ font-size:0.8rem; color:var(--muted); text-align:center; margin:18px 0 10px; }
+
+@media (max-width:600px){ header h1{ font-size:1.5rem; } }
 
 /* Dropdown bar */
 .langbar{
-  display:flex;
-  align-items:center;
-  gap:10px;
-  flex-wrap:wrap;
-  background:#ffffff;
-  border-radius: 12px;
-  padding: 10px 12px;
-  margin: 0 0 14px 0;
-  box-shadow: 0 2px 8px rgba(15, 23, 42, 0.10);
-  border-left: 4px solid #00a676;
+  display:flex; align-items:center; gap:10px; flex-wrap:wrap;
+  background:#ffffff; border-radius:12px; padding:10px 12px;
+  margin:0 0 14px 0; box-shadow:0 2px 8px rgba(15,23,42,0.10);
+  border-left:4px solid var(--accent1);
 }
 .langbar label{
-  font-size:0.9rem;
-  color:#123047;
-  font-weight:600;
+  font-size:0.9rem; color:var(--text); font-weight:600;
 }
 .langbar select{
-  padding: 7px 10px;
-  border-radius: 10px;
-  border: 1px solid #d0d7e2;
-  background: #fff;
-  color:#123047;
-  font-size: 0.9rem;
-  max-width: 100%;
+  padding:7px 10px; border-radius:10px; border:1px solid var(--stroke);
+  background:#fff; color:var(--text); font-size:0.9rem; max-width:100%;
 }
-
 </style>
 </head>
+
 <body>
 
 <header>
@@ -191,7 +154,7 @@ a.back span { font-size: 1.1rem; }
 <main>
 
   <div class="langbar" aria-label="Vælg sprog">
-    <label for="langSelect">Vælg sprog:</label>
+    <label for="langSelect" id="langLabel">Dooro luqadda:</label>
     <select id="langSelect">
       <option value="so" selected>Somalisk</option>
       <option value="da">Dansk</option>
@@ -211,12 +174,11 @@ a.back span { font-size: 1.1rem; }
     <div class="drug-meta">
       <div class="drug-info">
         <div class="drug-icon">
-
-          <svg viewBox="0 0 64 64">
-            <ellipse cx="32" cy="32" rx="22" ry="14" fill="#e8f3ff" stroke="#1a73e8" stroke-width="3"/>
-            <line x1="20" y1="20" x2="44" y2="44" stroke="#1a73e8" stroke-width="4"/>
+          <svg viewBox="0 0 64 64" aria-hidden="true">
+            <ellipse class="fill" cx="32" cy="32" rx="22" ry="14" fill="#e8f3ff" />
+            <ellipse cx="32" cy="32" rx="22" ry="14" fill="none" class="stroke" stroke-width="3"/>
+            <line x1="20" y1="20" x2="44" y2="44" class="stroke" stroke-width="4"/>
           </svg>
-
         </div>
         <div class="drug-labels">
           <div class="drug-name" id="drugName">Ibuprofen – xanuun, barar &amp; qandho</div>
@@ -308,13 +270,27 @@ a.back span { font-size: 1.1rem; }
 <script>
 const RTL = new Set(["ar","fa","ur","prs","ps"]);
 
+/* 9 language themes (you can tweak colors if you want) */
+const THEMES = {
+  so:  { a1:"#00a676", a2:"#0066cc", link:"#00509e", pillBg:"#d9f6e8", pillText:"#16634a" },
+  da:  { a1:"#0066cc", a2:"#003f8c", link:"#004aa3", pillBg:"#e6f0ff", pillText:"#1d4ed8" },
+  en:  { a1:"#0ea5e9", a2:"#2563eb", link:"#1d4ed8", pillBg:"#e0f2fe", pillText:"#075985" },
+  ar:  { a1:"#7c3aed", a2:"#4f46e5", link:"#4f46e5", pillBg:"#ede9fe", pillText:"#5b21b6" },
+  tr:  { a1:"#ef4444", a2:"#f97316", link:"#b91c1c", pillBg:"#fee2e2", pillText:"#b91c1c" },
+  ur:  { a1:"#16a34a", a2:"#0f766e", link:"#0f766e", pillBg:"#dcfce7", pillText:"#166534" },
+  fa:  { a1:"#0f766e", a2:"#0891b2", link:"#0f766e", pillBg:"#ccfbf1", pillText:"#115e59" },
+  prs: { a1:"#a855f7", a2:"#6d28d9", link:"#6d28d9", pillBg:"#f3e8ff", pillText:"#6b21a8" },
+  ps:  { a1:"#f59e0b", a2:"#d97706", link:"#b45309", pillBg:"#ffedd5", pillText:"#9a3412" }
+};
+
 const T = {
   so: {
-    title: "Ibuprofen – xanuun, barar &amp; qandho",
+    langLabel: "Dooro luqadda:",
+    title: "Ibuprofen – xanuun, barar & qandho",
     subtitle: "Waa warbixin kooban oo ku saabsan daawada – waxaa loogu talagalay waalidiinta iyo bukaannada Soomaaliyeed.",
     back: "Ku laabo liiska daawooyinka",
     badge: "Akhris fudud oo kooban",
-    drugName: "Ibuprofen – xanuun, barar &amp; qandho",
+    drugName: "Ibuprofen – xanuun, barar & qandho",
     drugForm: "Kiniin afka ah (Tablet til at tage gennem munden)",
     sections: {
       use: { title:"Isticmaalka", small:"(Anvendelse)", items:[
@@ -335,7 +311,7 @@ const T = {
       ]},
       warn: { title:"Digniino", small:"(Advarsler)", items:[
         "Ha isticmaalin haddii aad hore u lahayd boogo caloosha ah, dhiig-bax caloosha ama xasaasiyad NSAID.",
-        "Uurka 3-da bilood ee ugu dambeeya: guud ahaan looma oggola – la hadal dhakhtar."
+        "Uurka 3-da bilood ee ugu dambeeya: guud ahaan looma oggola – la hadal dhakhtarka."
       ]},
       ramadan: { title:"Ramadaan iyo soonka", small:"(Ramadan og faste)", items:[
         "Ibuprofen kaniinku wuxuu jebiyaa soonka haddii la qaato maalinta.",
@@ -354,6 +330,7 @@ const T = {
   },
 
   da: {
+    langLabel: "Vælg sprog:",
     title: "Ibuprofen – smerter, betændelse og feber",
     subtitle: "Kort information om lægemidlet til patienter og pårørende.",
     back: "Tilbage til medicinlisten",
@@ -398,6 +375,7 @@ const T = {
   },
 
   en: {
+    langLabel: "Choose language:",
     title: "Ibuprofen – pain, inflammation and fever",
     subtitle: "Brief information about the medicine for patients and relatives.",
     back: "Back to the medicine list",
@@ -442,6 +420,7 @@ const T = {
   },
 
   ar: {
+    langLabel: "اختر اللغة:",
     title: "إيبوبروفين – ألم والتهاب وحمى",
     subtitle: "معلومات مختصرة عن الدواء للمرضى وأفراد الأسرة.",
     back: "العودة إلى قائمة الأدوية",
@@ -486,6 +465,7 @@ const T = {
   },
 
   tr: {
+    langLabel: "Dil seçin:",
     title: "İbuprofen – ağrı, iltihap ve ateş",
     subtitle: "Hasta ve yakınları için ilaca dair kısa bilgi.",
     back: "İlaç listesine geri dön",
@@ -530,6 +510,7 @@ const T = {
   },
 
   ur: {
+    langLabel: "زبان منتخب کریں:",
     title: "آئیبوپروفین – درد، سوزش اور بخار",
     subtitle: "مریضوں اور اہلِ خانہ کے لیے دوا کے بارے میں مختصر معلومات۔",
     back: "ادویات کی فہرست پر واپس جائیں",
@@ -574,6 +555,7 @@ const T = {
   },
 
   fa: {
+    langLabel: "انتخاب زبان:",
     title: "ایبوپروفن – درد، التهاب و تب",
     subtitle: "اطلاعات کوتاه دربارهٔ دارو برای بیماران و خانواده‌ها.",
     back: "بازگشت به فهرست داروها",
@@ -618,6 +600,7 @@ const T = {
   },
 
   prs: {
+    langLabel: "انتخاب زبان:",
     title: "ایبوپروفن – درد، التهاب و تبه",
     subtitle: "معلومات کوتاه در مورد دوا برای مریضان و خانواده‌ها.",
     back: "بازگشت به فهرست دواها",
@@ -662,6 +645,7 @@ const T = {
   },
 
   ps: {
+    langLabel: "ژبه وټاکئ:",
     title: "ایبوپروفین – درد، التهاب او تبه",
     subtitle: "د ناروغانو او کورنۍ لپاره د درملو لنډ معلومات.",
     back: "د درملو لېست ته بېرته",
@@ -706,17 +690,28 @@ const T = {
   }
 };
 
-function stripTags(s){ return s.replace(/<[^>]*>?/gm,''); }
+function stripTags(s){ return (s || "").replace(/<[^>]*>?/gm,""); }
 
 function setDirLang(lang){
   document.documentElement.lang = lang;
   document.documentElement.dir = RTL.has(lang) ? "rtl" : "ltr";
 }
 
+function applyTheme(lang){
+  const th = THEMES[lang] || THEMES.so;
+  const r = document.documentElement.style;
+
+  r.setProperty("--accent1", th.a1);
+  r.setProperty("--accent2", th.a2);
+  r.setProperty("--link", th.link || "#00509e");
+  r.setProperty("--pillBg", th.pillBg || "#d9f6e8");
+  r.setProperty("--pillText", th.pillText || "#16634a");
+}
+
 function fillList(listId, items){
   const ul = document.getElementById(listId);
   ul.innerHTML = "";
-  items.forEach(html => {
+  (items || []).forEach(html => {
     const li = document.createElement("li");
     li.innerHTML = html;
     ul.appendChild(li);
@@ -727,10 +722,13 @@ function render(lang){
   const d = T[lang] || T.so;
 
   setDirLang(lang);
-  document.title = stripTags(d.title);
+  applyTheme(lang);
 
+  document.title = stripTags(d.title);
   document.getElementById("hdrTitle").textContent = stripTags(d.title);
   document.getElementById("hdrSubtitle").textContent = d.subtitle;
+
+  document.getElementById("langLabel").textContent = d.langLabel;
 
   document.getElementById("backLabel").textContent = d.back;
   document.getElementById("badge").textContent = d.badge;
@@ -738,6 +736,7 @@ function render(lang){
   document.getElementById("drugName").textContent = stripTags(d.drugName);
   document.getElementById("drugForm").textContent = d.drugForm;
 
+  // Section titles
   document.getElementById("useTitle").textContent = d.sections.use.title;
   document.getElementById("useSmall").textContent = d.sections.use.small || "";
 
@@ -762,6 +761,7 @@ function render(lang){
   document.getElementById("storeTitle").textContent = d.sections.store.title;
   document.getElementById("storeSmall").textContent = d.sections.store.small || "";
 
+  // Lists
   fillList("useList", d.sections.use.items);
   fillList("doseList", d.sections.dose.items);
   fillList("sideList", d.sections.side.items);
@@ -773,10 +773,27 @@ function render(lang){
 
   document.getElementById("footerNote").innerHTML = d.footerHTML;
   document.getElementById("credit").innerHTML = d.creditHTML;
+
+  // Keep language in back link (index.html?lang=xx)
+  const backA = document.querySelector("a.back");
+  const base = backA.getAttribute("href").split("?")[0];
+  backA.setAttribute("href", base + "?lang=" + encodeURIComponent(lang));
+
+  // Update URL without reload (nice-to-have)
+  const url = new URL(window.location.href);
+  url.searchParams.set("lang", lang);
+  window.history.replaceState({}, "", url.toString());
 }
 
-render("so");
-document.getElementById("langSelect").addEventListener("change", function(){
+// Start language from ?lang=
+const params = new URLSearchParams(window.location.search);
+const startLang = params.get("lang") || "so";
+
+const select = document.getElementById("langSelect");
+select.value = (T[startLang] ? startLang : "so");
+render(select.value);
+
+select.addEventListener("change", function(){
   render(this.value);
 });
 </script>
